Update:fixed the extra white space

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,15 +43,15 @@ html, body {
   -moz-transform-origin: 0 0;
 }
 
-// @media screen and (max-width: 767px) {
-//   * {
-//     overflow-x: hidden;
-//   }
-// }
+@media screen and (max-width: 767px) {
+  .photOver {
+    overflow-y: hidden;
+  }
+}
 
 img, iframe {
   max-width: 100%;
-  height: auto;
+  // height: auto;
   display: block;
 }
 
